--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.4.1
+certifi==2021.5.30
+charset-normalizer==2.0.4
 Django==3.2.7
 django-autoslug==1.9.8
 django-js-asset==1.2.2
 django-mptt==0.13.2
+idna==3.2
 Pillow==8.3.1
 pytz==2021.1
+requests==2.26.0
 sqlparse==0.4.1
+urllib3==1.26.6
