--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-mptt==0.13.2
 django-session-timeout==0.1.0
 idna==3.2
 Pillow==8.3.1
+psycopg2-binary==2.9.1
 python-decouple==3.4
 pytz==2021.1
 requests==2.26.0
