--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -3,7 +3,7 @@ option_settings:
     DJANGO_SETTINGS_MODULE: "iotd.settings"
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:container:python:
-    WSGIPath: "iotd.wsgi:application"
+    WSGIPath: "meshacart.wsgi:application"
   aws:elasticbeanstalk:environment:process:default:
     HealthCheckPath: "/api"
     MatcherHTTPCode: "200-499"
