--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.4.1
+awsebcli==3.20.2
+botocore==1.21.42
+cement==2.8.2
 certifi==2021.5.30
 charset-normalizer==2.0.4
+colorama==0.4.3
 Django==3.2.7
 django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.6
@@ -9,12 +13,22 @@ django-countries==7.2.1
 django-js-asset==1.2.2
 django-mptt==0.13.2
 django-session-timeout==0.1.0
+future==0.16.0
 idna==3.2
+jmespath==0.10.0
+pathspec==0.5.9
 Pillow==8.3.1
 psycopg2-binary==2.9.1
+pypiwin32==223
+python-dateutil==2.8.2
 python-decouple==3.4
 pytz==2021.1
+pywin32==301
+PyYAML==5.4.1
 requests==2.26.0
-six==1.16.0
+semantic-version==2.8.5
+six==1.14.0
 sqlparse==0.4.1
+termcolor==1.1.0
 urllib3==1.26.6
+wcwidth==0.1.9
